# nezumi-1

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: config.cmake  macros.cmake
source/compiler/: CMakeLists.txt
source/runtime/: CMakeLists.txt
source/runtime/include/nezumi/: config.h  game.h  math.h  timer.h  types.h  window.h
source/runtime/source/nezumi/: assert.h  game.c
source/runtime/source/nezumi/timer/: timer.internal.h
source/runtime/source/nezumi/timer/none/: timer.none.c
source/runtime/source/nezumi/timer/win32/: timer.win32.c
source/runtime/source/nezumi/window/: window.internal.c  window.internal.h
source/runtime/source/nezumi/window/none/: window.none.c
source/runtime/source/nezumi/window/sdl2/: window.sdl2.c
source/runtime/source/nezumi/window/win32/: window.win32.c
source/sample/: CMakeLists.txt
source/sample/source/: main.c
